Added Login and register page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container-fluid">
       <div class="card card-body text-center">
         <h1> <i class="fa fa-address-book fa-3x"></i></h1>
-        <h3>Already an User</h3><a class="btn btn-secondary btn-block" href="/users/login">Login</a>
-        <h3>Create an Account</h3><a class="btn btn-primary btn-block mb-2" href="/users/register">Register</a>
+        <h3>Already an User</h3><a class="btn btn-secondary btn-block" href="login.html">Login</a>
+        <h3>Create an Account</h3><a class="btn btn-primary btn-block mb-2" href="Register.html">Register</a>
       </div>
     </div>
   </body>
