Added Login and register page

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="login.css">
 
-    <title>DE - Difference In Education</title>
+    <title>Verto</title>
 </head>
 
 <body>
