--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 <body>
     <div class="back">
         <div class="loginBox">
-            <h1>Log in</h1>
+            <h1>Log In</h1>
         <div class="alert alert-danger alert-dismissible fade show" role="alert">You are Logged Out<button class="close"
             type="button" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times; </span></button>
